--- a/fai634/Dockerfile
+++ b/fai634/Dockerfile
@@ -9,6 +9,10 @@ run mkdir -p /out && \
 
 run conda config --set auto_update_conda False
 
+run apt -y install mc
+
+run pip install  fastbook wwf
+
 # run echo jupyter>>/out/requirements.txt
 # run pip install -r /out/requirements.txt
 
@@ -17,3 +21,7 @@ run conda config --set auto_update_conda False
 # RUN conda install -c conda-forge furl
 # run  conda install pytorch torchvision torchaudio cpuonly -c pytorch
 
+run mkdir -p /out && \
+  conda list>/out/condalist_$(date +"_%Y.%m.%d_%b-%a_%H.%M.%S")-02.txt && \
+  pip freeze>/out/requirements_$(date +"_%Y.%m.%d_%b-%a_%H.%M.%S")-02.txt && \
+  pip freeze>/out/requirements02.txt 
